@@ -4,11 +4,7 @@ require "spec_helper"
 
 # rubocop:disable Metrics/BlockLength
 RSpec.describe "Kiba::Extend::Registry::FileRegistry" do
-  before(:context) do
-    Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
-    populate_registry
-  end
-  after(:context) { Kiba::Extend.reset_config }
+  after(:each) { Kiba::Extend.reset_config }
 
   let(:filekey) { :fkey }
   let(:fkeypath) { File.join(fixtures_dir, "existing.csv") }
@@ -16,6 +12,11 @@ RSpec.describe "Kiba::Extend::Registry::FileRegistry" do
   let(:result) { registry.resolve(filekey) }
 
   describe "initial setup and registration" do
+    before(:each) do
+      Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
+      populate_registry
+    end
+
     context "when no namespace" do
       let(:data) { {path: fkeypath, supplied: true, lookup_on: :id} }
       it "registers and resolves" do
@@ -34,14 +35,14 @@ RSpec.describe "Kiba::Extend::Registry::FileRegistry" do
     context "with namespace" do
       it "registers and resolves" do
         expect(registry.resolve("ns__sub__fkey")).to eq({path: fkeypath,
-supplied: true})
+                                                         supplied: true})
       end
     end
   end
 
   describe "transformation" do
     context "when a supplied file does not exist" do
-      before(:context) do
+      before(:each) do
         Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
         @missing_supplied = File.join(fixtures_dir, "supplied", "not_there.csv")
         extra_entry = {
@@ -50,7 +51,7 @@ supplied: true})
         populate_registry(more_entries: extra_entry)
       end
 
-      after(:context) do
+      after(:each) do
         dir = Pathname.new(@missing_supplied).dirname
         dir.delete if dir.exist?
         Kiba::Extend.reset_config
@@ -65,7 +66,7 @@ supplied: true})
     end
 
     context "when expected directories do not exist" do
-      before(:context) do
+      before(:each) do
         Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
         @missing_dir = File.join(fixtures_dir, "working")
         extra_entry = {
@@ -76,7 +77,7 @@ supplied: true})
         transform_registry
       end
 
-      after(:context) do
+      after(:each) do
         Dir.delete(@missing_dir) if Dir.exist?(@missing_dir)
         Kiba::Extend.reset_config
       end
@@ -89,12 +90,11 @@ supplied: true})
 
   # subsequent tests depend on the transformation having been done here
   describe "post-transformation" do
-    before(:context) do
+    before(:each) do
       Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
       populate_registry
       transform_registry
     end
-    after(:context) { Kiba::Extend.reset_config }
 
     describe "#transform" do
       it "converts all registered items to FileRegistryEntry objects" do
@@ -157,6 +157,51 @@ supplied: true})
       it "returns Array of FileRegistryEntries" do
         expect(result).to be_a(Array)
         expect(result.first).to be_a(Kiba::Extend::Registry::FileRegistryEntry)
+      end
+    end
+  end
+
+  describe "#replace_entry_x_with_entry_y" do
+    let(:result) do
+      registry.replace_entry_x_with_entry_y(x: "fkey", y: "baz")
+      registry["fkey"]
+    end
+
+    context "pre-transformation" do
+      before(:each) do
+        Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
+        populate_registry
+      end
+
+      it "replaces entry" do
+        expect(result[:supplied]).to be_nil
+        expect(result[:tags]).to eq([:report])
+      end
+    end
+
+    context "post-transformation" do
+      before(:each) do
+        Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
+        populate_registry
+        transform_registry
+      end
+
+      it "replaces entry" do
+        expect(result.supplied).to be false
+        expect(result.tags).to eq([:report])
+      end
+    end
+
+    context "post-finalization" do
+      before(:each) do
+        Kiba::Extend.config.registry = Kiba::Extend::Registry::FileRegistry
+        populate_registry
+        Kiba::Extend.registry.finalize
+      end
+
+      it "does not replace entry" do
+        expect(result.supplied).to be true
+        expect(result.tags).to eq([])
       end
     end
   end
