@@ -36,7 +36,8 @@ These changes are merged into the `main` branch, but have not been released. Aft
 
 === Added
 
-* Add example value and occurrence count to Deduplicate::Table transform (PR#202)
+* Added example value and occurrence count to Deduplicate::Table transform (PR#202)
+* Added `#replace_entry_x_with_entry_y` method to `FileRegistry`
 
 === Changed
 
